--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Email-Service
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mnnishkumbhare@gmail.com
-spring.mail.password=rpks dtbl heqn qplh
+spring.mail.username=example@gmail.com
+spring.mail.password=**** **** **** ****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
